updates header text and color

--- a/src/app-header/app-header.component.html
+++ b/src/app-header/app-header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
   <div class="logo">
-    <h1 class="salon-title">Weather Watcher</h1>
+    <h1 class="salon-title">Weather Dashboard</h1>
   </div>
 </header>
