--- a/src/app-header/app-header.component.css
+++ b/src/app-header/app-header.component.css
@@ -19,7 +19,7 @@
   padding: 10px 0;
   letter-spacing: 1px;
   text-transform: uppercase;
-  background: linear-gradient(135deg, #2c3e50, #3498db);
+  background: black;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
