--- a/src/menu-component/menu-component.component.html
+++ b/src/menu-component/menu-component.component.html
@@ -1,6 +1,6 @@
 <div class="menu-container">
   <nav class="nav-menu">
-    <a routerLink="/weather" class="nav-link">Weather</a>
+    <a routerLink="/weather" class="nav-link">Weather Dashboard</a>
     <a routerLink="/info" class="nav-link">Info</a>
   </nav>
 </div>
