updates color for count alert

--- a/src/app-header/app-header.component.css
+++ b/src/app-header/app-header.component.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(251, 233, 185, 0.906);
+  background-color: white;
   padding: 15px 20px;
   color: white;
   position: relative;
