--- a/src/menu-component/menu-component.component.css
+++ b/src/menu-component/menu-component.component.css
@@ -30,7 +30,7 @@
 
 /* Active (selected) tab styling */
 .nav-link.active-link {
-  background-color: #b0b0b0; /* Stronger gray for active */
+  background-color: black; /* Stronger gray for active */
   color: white; /* White text for active link */
   font-weight: bold; /* Bold text for active link */
 }
