--- a/src/menu-component/menu-component.component.html
+++ b/src/menu-component/menu-component.component.html
@@ -1,6 +1,6 @@
 <div class="menu-container">
   <nav class="nav-menu">
-    <a routerLink="/weather" class="nav-link" [ngClass]="{ 'active-link': isActive('/weather') }">Weather Dashboard</a>
+    <a routerLink="/weather" class="nav-link" [ngClass]="{ 'active-link': isActive('/weather') }">Weather</a>
     <a routerLink="/info" class="nav-link" [ngClass]="{ 'active-link': isActive('/info') }">Info</a>
   </nav>
 </div>
